--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
 <body style="margin: 0; background: #ddd;" align="center">
     <div style="align:center;display: none"><img src="res/share.jpg" width="10%" /></div>
 
-    <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="0"></canvas>
-
-    <video id="contentElement" style="display:none;position: absolute;top:0px;left: 0px;"></video>
-    <div id="block-Box" style="display:block;width:100%;height:100%;"></div>
+    <div id="canvasDiv" style="width: 100%; height: 100%;">
+        <div id="Cocos2dGameContainer" style="transform: rotate(0deg); width: 1920px; height: 716px; margin: 0px; padding: 0px;">
+            <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="99" class="gameCanvas" width="1920" height="716" style="width: 1920px; height: 716px;">
+            </canvas>
+        </div>
+        <div id="block-Box" style="display: block; width: 100%; height: 100%;"></div>
+    </div>
 
     <div id="adContainer" style="display:none;position: absolute;top:0px;left: 0px;width:100%;height:100%;z-index:999;"></div>
     <div id="loadingText" style="width:100%;display: none;text-align:center;position:absolute;top:45%;z-index:2;font-size:20px;color:#f99f0a">
