--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>小游戏：水果大王</title>
 
     <!--http://www.html5rocks.com/en/mobile/mobifying/-->
-    <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1, minimum-scale=1,maximum-scale=1" />
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1, maximum-scale=1" />
 
     <!--https://developer.apple.com/library/safari/documentation/AppleApplications/Reference/SafariHTMLRef/Articles/MetaTags.html-->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -18,7 +19,7 @@
     <meta name="renderer" content="webkit" />
     <meta name="force-rendering" content="webkit" />
     <!-- force edge on IE -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="msapplication-tap-highlight" content="no">
 
     <!-- force full screen on some browser -->
@@ -39,23 +40,39 @@
 
     <link rel="stylesheet" type="text/css" href="style-mobile.css" />
 
+    <style>
+        .cocosVideo:-moz-full-screen {
+            transform: matrix(1, 0, 0, 1, 0, 0) !important;
+        }
+
+        .cocosVideo:full-screen {
+            transform: matrix(1, 0, 0, 1, 0, 0) !important;
+        }
+
+        .cocosVideo:-webkit-full-screen {
+            transform: matrix(1, 0, 0, 1, 0, 0) !important;
+        }
+    </style>
 </head>
 
 <body style="margin: 0; background: #ddd;" align="center">
-    <div style="align:center;display: none"><img src="res/share.jpg" width="10%" /></div>
+    <div style="display: none" align="center"><img src="res/share.jpg" width="10%" /></div>
 
-    <!--<div id="canvasDiv" style="width:100%;height:100%;">-->
-    <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="0"></canvas>
+    <div id="canvasDiv" style="width: 100%; height: 100%;">
+        <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="0"></canvas>
 
-    <video id="contentElement" style="display:none;position: absolute;top:0px;left: 0px;">
-        <!--<source src="http://rmcdn.2mdn.net/Demo/vast_inspector/android.mp4"></source>-->
-        <!--<source src="http://rmcdn.2mdn.net/Demo/vast_inspector/android.webm"></source>-->
-    </video>
-    <div id="block-Box" style="display:block;width:100%;height:100%;"></div>
-    <!--</div> -->
+        <video id="contentElement" style="display: none; position: absolute; top: 0px; left: 0px;">
+            <!--<source src="http://rmcdn.2mdn.net/Demo/vast_inspector/android.mp4"></source>-->
+            <!--<source src="http://rmcdn.2mdn.net/Demo/vast_inspector/android.webm"></source>-->
+        </video>
+        <div id="block-Box" style="display: block; width: 100%; height: 100%;"></div>
+    </div>
 
+    <div id="adContainer"
+        style="display: none; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; z-index: 999;">
+    </div>
     <div id="loadingText"
-        style="width:100%;display: none;text-align:center;position:absolute;top:45%;z-index:2;font-size:20px;color:#f99f0a">
+        style="width: 100%; display: none; text-align: center; position: absolute; top: 45%; z-index: 2; font-size: 20px; color: #f99f0a;">
         loading......0%
     </div>
 
@@ -65,11 +82,9 @@
         <!-- </div> -->
     </div>
 
-    <div id="loadingImg" style="top:45%;width: 100%;position:absolute; ">
+    <div id="loadingImg" style="top: 45%; width: 100%; position: absolute;">
         <img src="res/loading.gif" width="7%" height="7%" />
     </div>
-
-    <!--<div align="center" style="font-size: 10px;color: dimgrey">advertisement</div>-->
 
     <script src="src/settings.js" charset="utf-8"></script>
 
@@ -85,7 +100,7 @@
         judgeLanTitle();
         function judgeLanTitle() {
 
-            //        console.log("window.navigator.language",window.navigator.language);
+            // console.log("window.navigator.language",window.navigator.language);
 
             if (window.navigator.language == "zh-CN" || window.navigator.language == "zh-cn") {
                 document.title = "小游戏：水果大王";
