--- a/index.html
+++ b/index.html
@@ -60,15 +60,9 @@
 
     <div id="canvasDiv" style="width: 100%; height: 100%;">
         <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="0"></canvas>
-
-        <video id="contentElement" style="display: none; position: absolute; top: 0px; left: 0px;">
-            <!--<source src="http://rmcdn.2mdn.net/Demo/vast_inspector/android.mp4"></source>-->
-            <!--<source src="http://rmcdn.2mdn.net/Demo/vast_inspector/android.webm"></source>-->
-        </video>
         <div id="block-Box" style="display: block; width: 100%; height: 100%;"></div>
     </div>
 
-    <div id="adContainer" style="display: none; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; z-index: 999;"></div>
     <div id="loadingText" style="width: 100%; display: none; text-align: center; position: absolute; top: 45%; z-index: 2; font-size: 20px; color: #f99f0a;">
         loading......0%
     </div>
@@ -201,8 +195,12 @@
     </script>
 
     <script src="src/settings.js" charset="utf-8"></script>
-
     <script src="main.js" charset="utf-8"></script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>window.adsbygoogle = window.adsbygoogle || [];
+            const adBreak=function(o){adsbygoogle.push(o);}
+    </script>
+
 
     <script type="text/javascript">
         (function () {
